network/cilium/cilium/manifest/network-policies/classless-inter-domain-routing/allow-ingress-backend-from-frontend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
 name: allow-ingress
 namespace: applications
spec:
  endpointSelector:
     matchLabels:
       app: backend-cilium-app
  ingress:
  - fromEndpoints:
    - matchLabels:
       app: frontend-cilium-app
