network/cilium/cilium/manifest/network-policies/classless-inter-domain-routing/default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
 name: default-deny
 namespace: applications
spec:
  endpointSelector: {}
  ingressDeny:
  - fromCIDR:
    - 0.0.0.0/0
